abstract: Added SST, added evaluation results

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,8 @@
 \begin{abstract}
-A \gls{CNN} was trained to segment street on a pixel basis from photographs
-taken from a drivers perspective. This task is important for self-driving cars
-and can also support other object recognition tasks.
+Segment street on a pixel basis from photographs taken from a drivers
+perspective is important for self-driving cars and can also support other
+object recognition tasks. A framework called SST was developed to examine
+different neural networks accuracy and execution time. The best neural network
+achieved an $F_1$-score of \SI{89.5}{\percent} with a simple feed forward
+neural network which trained to solve a regression task.
 \end{abstract}
