ch1: Added structure of the paper to introduction

--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -10,5 +10,14 @@ especially in computer vision, suggest that \glspl{CNN} might be able to
 achieve higher classification accuracy on road segmentation tasks then those
 traditional approaches.
 
-The algorithms need to be fast (e.g. classify an image in less than \SI{0.3}{\second})
-to be applicable in self-driving cars.
+The algorithms need to be fast (e.g. classify an image in less than
+\SI{0.3}{\second}) to be applicable in self-driving cars.
+
+\Cref{sec:related-work} mentions published work which influenced us in the
+choice of our methods. The basics methods used are explained in
+TODO-LINK-CONCEPT-VITALI. It follows a description of the realization in
+\cref{sec:realization} with a description of the used frameworks as well as
+details about the developed SST framework. Models are explained in
+\cref{sec:model} and evaluated in \cref{sec:evaluation}. Finally,
+\cref{sec:discussion} summarizes the lessons we've learned and mentiones how
+our work can be continued.
