ch1: fixed type (mentiones -> mentions)

--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -19,5 +19,5 @@ TODO-LINK-CONCEPT-VITALI. It follows a description of the realization in
 \cref{sec:realization} with a description of the used frameworks as well as
 details about the developed SST framework. Models are explained in
 \cref{sec:model} and evaluated in \cref{sec:evaluation}. Finally,
-\cref{sec:discussion} summarizes the lessons we've learned and mentiones how
+\cref{sec:discussion} summarizes the lessons we've learned and mentions how
 our work can be continued.
