ch2-related-work: Fixed a couple of spelling mistakes; Splitted into related work and concepts; use glossarey where appropriate

--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -15,7 +15,7 @@ The algorithms need to be fast (e.g. classify an image in less than
 
 \Cref{sec:related-work} mentions published work which influenced us in the
 choice of our methods. The basics methods used are explained in
-TODO-LINK-CONCEPT-VITALI. It follows a description of the realization in
+\cref{sec:concept}. It follows a description of the realization in
 \cref{sec:realization} with a description of the used frameworks as well as
 details about the developed SST framework. Models are explained in
 \cref{sec:model} and evaluated in \cref{sec:evaluation}. Finally,
