--- a/glossary.tex
+++ b/glossary.tex
@@ -6,10 +6,12 @@
 \newacronym{CFM}{CFM}{classification figure of merit}
 \newacronym{CNN}{CNN}{Convolutional Neural Network}
 \newacronym{CUDA}{CUDA}{Compute Unified Device Architecture}
+\newacronym{FCN}{FCN}{Fully Convolutional Network}
 \newacronym{GMM}{GMM}{Gaussian mixture model}
 \newacronym{GPU}{GPU}{graphics processing unit}
 \newacronym{LDA}{LDA}{linear discriminant analysis}
 \newacronym{MLP}{MLP}{multilayer perceptron}
+\newacronym{MRF}{MRF}{Markov Random Field}
 \newacronym{MSE}{MSE}{mean squared error}
 \newacronym{PCA}{PCA}{principal component analysis}
 \newacronym{PyPI}{PyPI}{Python Package Index}
