ch2: Fixed cross-reference

--- a/ch2-related-work.tex
+++ b/ch2-related-work.tex
@@ -20,8 +20,8 @@ like e.g. segmentation.\\
 With \cite{long2014fully} Long and his team introduced a method for general
 scene parsing based on \glspl{FCN} and deconvolutional layer.\\
 This approach is used as a blueprint to our implementation, described in
-\cref{sec:model}. Therefore the main concepts are introduced at the end of this
-section.\\
+\cref{sec:model}. Therefore the main concepts are introduced in
+\cref{sec:concept}.\\
 Instead of creating a new model, they converted existing classification
 \glspl{CNN} like AlexNet or GoogLeNet into \glspl{FCN}. The obtained heat maps for
 every class where calculated for multiple resolutions and upscaled with
