ch2: Added TODO; used glossary for FCN

--- a/ch2-related-work.tex
+++ b/ch2-related-work.tex
@@ -47,7 +47,7 @@ Is \glspl{CNN} where TODO
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=9cm]{figures/fcnn}
-	\caption{Comparison of a \gls{CNN} for classification (top) and a FCN which creates a heat map (bottom). \cite{long2014fully}}
+	\caption{Comparison of a \gls{CNN} for classification (top) and a \gls{FCN} which creates a heat map (bottom). \cite{long2014fully}}
 \end{figure}
 
 \subsection{Fully connected convolutional layer}
@@ -59,4 +59,4 @@ fully connected layer in a classification \gls{CNN}.
 \subsection{Deconvolutional Layer}
 Deconvolutions are inverse convolutions. In context of neural networks the
 function for forward and backward calculation are just switched. That results
-in a layer....
+in a layer. TODO
