--- a/ch8-discussion.tex
+++ b/ch8-discussion.tex
@@ -4,14 +4,15 @@
 
 In standard scenes, the classification accuracy is impressive. The street gets
 segmented very well in a runtime of well below  $\SI{0.5}{\second}$. However,
-in some images the model does perform very badly. These are mainly images where
-with special situations such as an uncommon street color and unusual lightning.
-We believe that these problems can be easily eliminated by using more training
-data. One approach to get better results on the KITTI data set is to train the
-model with different data and only use the KITTI training data for fine-tuning.
+in some images the model does perform very badly. These are mainly images with
+special situations such as an uncommon street colors or unusual lightning. We
+believe that these problems can be easily eliminated by using more training
+data. Another approach to get better results on the KITTI data set is to train
+the model with different data and only use the KITTI training data for
+fine-tuning.
 
 One advantage of our models is that they are perfectly parallelizable. Each
-image section can be evaluated independently. This can be adventurous in
+image section can be evaluated independently. This can be advantageous in
 practical applications. When using specialized hardware such as neuromorphic
 chips it is possible to build hundreds of cores in a car. In such a case our
 classification approach can yield outstanding results. Given enough training
@@ -20,6 +21,5 @@ classification results.
 
 Finally one can also improve the results with better hardware. For some of our
 models the \gls{GPU} RAM was the limiting factor. Especially for the regression
-model using bigger image section can lead to much better results in quality as
-well as in speed.
-
+model using a bigger section of the image can lead to much better results in
+quality as well as in speed.
