--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -18,7 +18,7 @@
 \usepackage{parskip}
 \usepackage[pdftex,final]{graphicx}
 \usepackage{csquotes}
-
+\usepackage{bm}
 \usepackage{blindtext}\usepackage{braket}
 \usepackage{booktabs}
 \usepackage{multirow}
