--- a/ch8-discussion.tex
+++ b/ch8-discussion.tex
@@ -1,6 +1,22 @@
-%!TEX root = write-math-ba-paper.tex
+%!TEX root = pixel-wise-street-segmentation.tex
 
 \section{Discussion}\label{sec:discussion}
+
+The results presented in this paper were obtained over five months in a
+practical course. We started with the Caffe framework and tinkered around with
+a fork created by Jonathan Long. The model he provided could not be used on our
+computers, because \SI{4}{\giga\byte} of GPU RAM were not enough to evaluate
+the model. We tried to adjust the model model, but we failed due to the lack of
+documentation, cryptic error messages and random crashes while training or
+evaluating. This was the reason why we switched to Lasagne. Using this
+framework, we noticed that we still need to try many different topologies. Our
+first tries lead to bad classification accuracy and we are not aware of any
+analytical way to determine a network topology for a given task. For this
+reason, we developed the SST framework. This allows developers to quickly
+train, test, and evaluate new network topologies. Although the framework got
+its final flexible form in the last month of the practical course, we used it
+to evaluate regression and classification models with several topologies. The
+results are described in \cref{sec:evaluation}.
 
 In standard scenes, the classification accuracy is impressive. The street gets
 segmented very well in a runtime of well below  $\SI{0.5}{\second}$. However,
