ch5-sst, ch8-discussion: Fixed spelling; Discussion -> Conclusion

--- a/ch5-sst.tex
+++ b/ch5-sst.tex
@@ -14,7 +14,7 @@ are still required and manually install them.
 
 \subsubsection{Functionality}
 \verb+sst+ makes use of Python files for neural network definitions. Those
-models have to have a \verb+generate_nnet(feature_vectors)+ function which
+models must have a \verb+generate_nnet(feature_vectors)+ function which
 returns an object with a \verb+fit(features, labels)+ method, a
 \verb+predict(feature_vector)+ method and a
 \verb+predict_proba(feature_vector)+ method. This is typically achieved by
