--- a/ch8-discussion.tex
+++ b/ch8-discussion.tex
@@ -1,6 +1,6 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
-\section{Discussion}\label{sec:discussion}
+\section{Conclusion}\label{sec:discussion}
 
 The results presented in this paper were obtained over five months in a
 practical course. We started with the Caffe framework and tinkered around with
