--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -6,25 +6,52 @@ In this section we discuss the experimental results of the models
 presented in \cref{sec:model}. First, we evaluate the two different
 models. Second, we compare our best one to the work of
 Mohan~\cite{Tarel2009} (which is ranked on place~1 at KITTI road
-segmentation~\cite{Tarel2009}). The KITTI Road Estimation data set is the basis
-of our experiments (see \cref{sec:datasets}).
-
+segmentation~\cite{Tarel2009}). 
 \input{ch3-datasets}
 
 \subsection{Metrics / Experiments}
+
+
+
+For the evaluation of the following experiments we used these metrics:
+accuracy ($\mathbf{ACC}$), average precision ($\mathbf{AP}$), precision ($\mathbf{PRE}$),  recall ($\mathbf{REC}$), false positive rate ($\mathbf{FPR}$),  false negative rate ($\mathbf{FNR}$)
+and the $F_1$-measure ($\mathbf{F_1}$) \cref{eq:accuracy} - (\ref{eq:fMeasure}) (true positive (TP), true negative (TN), false positive (FP), false negative (FN)). 
+
+\begin{equation} \label{eq:accuracy}
+\text{ACC} = \frac{TP + TN}{TP + FP + TN + FN}
+\end{equation}
+\begin{equation} \label{eq:precision}
+\text{PRE} = \frac{TP}{TP + FP}
+\end{equation}
+\begin{equation} \label{eq:recall}
+\text{REC} = \frac{TP}{TP + FN}
+\end{equation}
+\begin{equation} \label{eq:fpr}
+\text{FPR} = \frac{FP}{FP + TN}
+\end{equation}
+\begin{equation} \label{eq:fnr}
+\text{FNR} = \frac{FN}{TP+ FN}
+\end{equation}
+\begin{equation} \label{eq:ap}
+\text{AP} = \frac{1}{11} \displaystyle\sum_{r \in 0,0.1,..1} \max_{\tilde{r}: \tilde{r} > r} \text{Precision}(\tilde{r})
+\end{equation}
+\begin{equation} \label{eq:fMeasure}
+F_1= \frac{2 \cdot TP}{2TP +FP +FN}
+\end{equation}
+
+%  
+In \cref{eq:ap}  $\text{Precision}(\tilde{r})$ is the measured precision at recall $\tilde{r}$ ~\cite{everingham2010pascal}. These metrics are also used by the offical KITTI evaluation. \\
 To be able to evaluate different approaches we used only the
 training data of the KITTI data set, as the ground truth for the test data is
 not publicly available. We splitted the training data beforehand 20 to 80
 (test/training) in order to be able to measure our performance. Our best model
 was submitted for the official KITTI evaluation
-(\href{http://www.cvlibs.net/datasets/kitti/eval_road.php}{www.cvlibs.net/datasets/kitti/eval\_road.php})
-
+(\href{http://www.cvlibs.net/datasets/kitti/eval_road.php}{www.cvlibs.net/datasets/kitti/eval\_road.php})\\
 
 Our goal was to achieve an adequate classification performance while staying
 within a time frame of \textbf{\SI{20}{\milli\second}} as maximal
-classification time per image. Resulting in a usable real time application of
-our approach. As a real time application would be the use case for street
-classification in autonomous cars anyway.\\
+classification time per image. This would allow our approach to be a used in a real-time application. 
+As the normal use case of road segmentation would be in autonomous cars the real-time ability is a crucial point.\\
 
 We used a computer with these specifications for the experiments (GPU was used
 for training and testing):
@@ -33,6 +60,18 @@ for training and testing):
     \item System memory \SI{16}{\gibi\byte}
     \item GeForce GTX 980 \SI{4}{\gibi\byte} RAM
 \end{itemize}
+
+\Cref{tab:ownapproach} shows the result of our evaluation and regression
+approach using the models and parameters as described in \cref{sec:model}. 
+It shows clearly that the regression model has an
+overall better $F_1$-measure and accuracy score than the classification model.
+Surprisingly, a smaller stride does not automatically lead to a better
+performance. The classification model shows  the best result with a stride of $s=37$, 
+while in the regression based approach a stride $s=51$ achieves the
+best performance. Unfortunately the RAM of the graphic card limited our
+possibility to use larger strides and patch sizes. This could have been a
+promising possibility to train and evaluate on a full image size and still keep
+our time constraint and even enhance our performance.\\
 
 \begin{table}[]
     \begin{center}
@@ -52,32 +91,19 @@ for training and testing):
         \caption{Results of classification (cla.) and regression (reg.) models
                  with different strides $s$ on our own test set (58~images,
                  $ ~6.7 \cdot 10^6$ pixels). The table entries highlighted in
-                 red are the best results of their column.}
+                 red are the best evaluation score regarding different parametrizations.}
         \label{tab:ownapproach}
     \end{center}
 \end{table}
 
-\Cref{tab:ownapproach} shows the result of our evaluation and regression
-approach using the models and parameters as described in \cref{sec:model}. The
-used score is the $F_1$-measure \cref{eq:fMeasure} which is also used in the
-official KITTI evaluation. The table also shows the values of true positive
-(TP), true negative (TN), false positive (FP), false negative (FN) and accuracy
-(ACC) \cref{eq:accuracy}. It shows clearly that the regression model has an
-overall better $F_1$-measure and accuracy score than the classification model.
-Surprisingly, a smaller stride does not automatically lead to a better
-performance. The classification model shows with a stride of $s=37$ the
-best result, while in the regression based approach a stride $s=51$ achieves the
-best performance. Unfortunately the ram of the graphic card limited our
-possibility to use larger strides and patch sizes. This could have been a
-promising possibility to train and evaluate on a full image size and still keep
-our time constraint and even enhance our performance.\\
 
-\begin{equation} \label{eq:fMeasure}
-F_1-\text{measure} = \frac{2 \cdot TP}{2TP +FP +FN}
-\end{equation}
-\begin{equation} \label{eq:accuracy}
-\text{accuracy} = \frac{TP + TN}{TP + FP + TN + FN}
-\end{equation}
+
+The predefined time constraint (classification of
+one image in under \SI{20}{\milli\second}) was meet which is shown by the run time evaluation
+displayed in \Cref{tab:runtime}. As expected, the runtime increases with a
+smaller stride size. The classification model shows an overall faster run time
+performance as the regression. Finally, we meet the time constraint 
+by using a stride of $s=51$ in both approaches.
 
 \begin{table}[]
     \begin{center}
@@ -89,7 +115,7 @@ F_1-\text{measure} = \frac{2 \cdot TP}{2TP +FP +FN}
             \textbf{classification} & \SI{1.83}{\second} & \SI{0.20}{\second}  & \SI{0.11}{\second}\\
             \bottomrule
         \end{tabular}
-        \caption{Runtime per image ($621 \times 188$ pixel) in seconds.}
+        \caption{Runtime per image ($621 \times 188$ pixel).}
         \label{tab:runtime}
     \end{center}
 \end{table}
@@ -122,16 +148,11 @@ F_1-\text{measure} = \frac{2 \cdot TP}{2TP +FP +FN}
         \bottomrule
         \end{tabular}
     \end{center}
-    \caption{Results of the official KITTI evaluation. (AP = Average Precision, PRE = Precision, REC = Recall, FPR = False Positive Rate, FNR = False Negative Rate)}
+    \caption{Results of our regression model (stride 51) on the official KITTI evaluation with different road types.}
     \label{tab:kitti}
 \end{table*}
 
-To evaluate if we could meet our predefined time constraint (classification of
-one image in under \SI{20}{\milli\second}) we conducted a run time evaluation
-which is shown in \Cref{tab:runtime}. As expected, the runtime increases with a
-smaller stride size. The classification model shows an overall faster run time
-performance as the regression. Finally, we managed to achieve a run time under
-\SI{20}{\milli\second} by using a stride of $s=51$ in both approaches.
+
 
 As the regression approach had the best performance and also met our time
 constraint, we used it to evaluate the KITTI test set and submitted the results
@@ -142,7 +163,7 @@ Unfortunately, our regression model performs much worse on the official test
 set than on our own test set. Here the $F_1$-measure score ranges between
 \SI{56.4}{\percent} and \SI{79.7}{\percent} while Mohan ~\cite{Tarel2009}
 achieves on all road categories a $F_1$-measure score of about
-\SI{90.0}{\percent}. The reason for this huge difference to might be: \\
+\SI{90.0}{\percent}. The reason for this huge difference might be: \\
 
 \begin{enumerate}
     \item Overfitting of the neural network on our own test data
@@ -159,7 +180,7 @@ achieves on all road categories a $F_1$-measure score of about
 To improve the latter it would be essential to use training data of a lot more
 different street types and lighting conditions.\\
 Finally \cref{fig:sfig2} gives some positives example where our neural network
-did well. Hardly no false positives and the street around the cars is nicely
+did well. There are hardly no false positives and the street around the cars is nicely
 segmented.
 
 
