--- a/pixel-wise-street-segmentation.bib
+++ b/pixel-wise-street-segmentation.bib
@@ -150,6 +150,17 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Year                     = {2014}
 }
 
+@article{everingham2010pascal,
+  title={The pascal visual object classes (voc) challenge},
+  author={Everingham, Mark and Van Gool, Luc and Williams, Christopher KI and Winn, John and Zisserman, Andrew},
+  journal={International journal of computer vision},
+  volume={88},
+  number={2},
+  pages={303--338},
+  year={2010},
+  publisher={Springer}
+}
+
 @Article{scikit-learn,
   Title                    = {Scikit-learn: Machine Learning in {P}ython},
   Author                   = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
