--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -1,6 +1,7 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
 \section{Introduction}
+\label{sec:introduction}
 Pixel-wise segmentation of street is an important part of assisted and
 autonomous driving~\cite{Tarel2009}. It can help to understand road scenes and
 reduce the space to search for lane markings. Traditionally, road segmentation
