--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -39,6 +39,7 @@
 \usepackage{glossaries}
 \loadglsentries[main]{glossary}
 \makeglossaries
+\usepackage{footnote}
 
 \title{Pixel-wise Segmentation of Street with Neural Networks}
 \author{Sebastian Bittel, Vitali Kaiser, Marvin Teichmann, Martin Thoma}
